--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/media/aman/Stuff/ASU Study work/SER 502/Project1/SER502-Spring2018-Team23/src/antlr-4.7.1-complete.jar"/>
+	<classpathentry kind="lib" path="src/lib/rrd-antlr4-0.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
